--- a/Ian_Luyt_Assignment.ipynb
+++ b/Ian_Luyt_Assignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DATA ASSIGNMENT - LUYT"
+    "# DATA EXAMPLE - LUYT"
    ]
   },
   {
